--- a/pom.xml
+++ b/pom.xml
@@ -134,9 +134,9 @@
                     <!--镜像名，这里用工程名-->
                     <imageName>${docker.repository}/${docker.registry.name}/${project.artifactId}:${project.version}</imageName>
                     <!--TAG,这里用工程版本号-->
-                    <imageTags>
-                        <imageTag>${project.version}</imageTag>
-                    </imageTags>
+                    <!--<imageTags>-->
+                        <!--<imageTag>${project.version}</imageTag>-->
+                    <!--</imageTags>-->
                     <!--镜像的FROM，使用java官方镜像-->
                     <baseImage>java:8u111-jdk</baseImage>
                     <!--该镜像的容器启动后，直接运行spring boot工程-->
