--- a/pom.xml
+++ b/pom.xml
@@ -133,10 +133,10 @@
                 <!--docker镜像相关的配置信息-->
                 <configuration>
                     <!--镜像名，这里用工程名-->
-                    <imageName>${docker.repository}/${docker.registry.name}/${project.artifactId}:${project.version}/${maven.build.timestamp}</imageName>
+                    <imageName>${docker.repository}/${docker.registry.name}/${project.artifactId}/${maven.build.timestamp}</imageName>
                     <!--TAG,这里用工程版本号-->
                     <imageTags>
-                        <imageTag>${project.version}/${maven.build.timestamp}</imageTag>
+                        <imageTag>${maven.build.timestamp}</imageTag>
                     </imageTags>
                     <!--镜像的FROM，使用java官方镜像-->
                     <baseImage>java:8u111-jdk</baseImage>
